--- a/.config/git/config
+++ b/.config/git/config
@@ -26,9 +26,9 @@
     format = man
 [merge]
     conflictstyle = diff3
-[url "git.ttypty.com:~/Git/private/"]
+[url "~/Store/git/private/"]
     insteadOf = private:
-[url "git.ttypty.com:~/Git/upstream/"]
+[url "~/Store/git/upstream/"]
     insteadOf = upstream:
 [includeIf "hasconfig:remote.*.url:private:**"]
     path = ~/.config/git/dev.config
