--- a/.config/git/personal.config
+++ b/.config/git/personal.config
@@ -2,7 +2,7 @@
     textconv = lb conv
 [url "~/Store/git/private/"]
     insteadOf = private:
-[url "~/Store/git/sr.ht/"]
+[url "git@git.sr.ht:~enckse/"]
     insteadOf = sr.ht:
 [includeIf "hasconfig:remote.*.url:private:**"]
     path = ~/.config/git/dev.config
