moving where clone comes from

--- a/.config/git/personal.config
+++ b/.config/git/personal.config
@@ -4,7 +4,7 @@
     textconv = lb conv
 [url "~/Store/git/private/"]
     insteadOf = private:
-[url "git@git.sr.ht:~enckse/"]
+[url "~/Store/git/sr.ht/"]
     insteadOf = sr.ht:
 [includeIf "hasconfig:remote.*.url:private:**"]
     path = ~/.config/git/dev.config
