split tools out to their own location

--- a/.config/git/personal.config
+++ b/.config/git/personal.config
@@ -10,13 +10,5 @@
     path = ~/.config/git/dev.config
 [includeIf "hasconfig:remote.*.url:sr.ht:**"]
     path = ~/.config/git/dev.config
-[motd]
-    enable = uncommitted
-[uncommitted]
-    scan = true
-    prompt = true
-    match = "^(private|sr.ht):*"
-[uncommitted "scan"]
-    home = false
-    path = ~/Workspace
-    path = ~/.ttypty
+[include]
+    path = ~/.config/git/tools.config
