--- a/.config/git/config
+++ b/.config/git/config
@@ -29,9 +29,9 @@
     hooksPath = ~/.config/git/hooks
 [diff "lb"]
     textconv = lb conv
-[url "~/Store/git/private/"]
+[url "git.local:~/Store/git/private/"]
     insteadOf = private:
-[url "~/Store/git/sr.ht/"]
+[url "git.local:~/Store/git/sr.ht/"]
     insteadOf = sr.ht:
 [includeIf "hasconfig:remote.*.url:private:**"]
     path = ~/.config/git/local.config
