--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -7,6 +7,8 @@
         "sway/scratchpad"
     ],
     "modules-right": [
+        "custom/wac",
+        "custom/uncommitted",
         "idle_inhibitor",
         "backlight",
         "battery",
@@ -15,15 +17,6 @@
         "clock",
         "tray"
     ],
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
-        }
-    },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
@@ -89,5 +82,17 @@
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
         "format-icons": ["", "", "", "", ""]
+    },
+    "custom/uncommitted": {
+    	"format": "{text}",
+    	"interval": 5,
+    	"exec": "$HOME/.local/bin/git-uncommitted json",
+        "return-type": "json"
+    },
+    "custom/wac": {
+    	"format": "{text}",
+    	"interval": 30,
+    	"exec": "$HOME/.local/bin/wac-status json",
+        "return-type": "json"
     }
 }
