--- a/.config/sway/config
+++ b/.config/sway/config
@@ -37,7 +37,7 @@ bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
-bindsym $mod+Ctrl+Equal resize grow width 10
+bindsym $mod+Plus resize grow width 10
 bindsym $mod+Ctrl+Minus resize shrink width 10
 bindsym $mod+Equal resize grow height 10
 bindsym $mod+Minus resize shrink height 10
