Revert "merging tools"
This reverts commit 2155cfccf7aaf254e621ac39a594958a8009a363.

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -92,7 +92,7 @@
     "custom/wac": {
     	"format": "{text}",
     	"interval": 30,
-    	"exec": "$HOME/.local/bin/wac json",
+    	"exec": "$HOME/.local/bin/wac-status json",
         "return-type": "json"
     }
 }
