--- a/.config/efm-langserver/config.yaml
+++ b/.config/efm-langserver/config.yaml
@@ -10,7 +10,10 @@ tools:
       - '%f:%l:%c: %trror: %m'
       - '%f:%l:%c: %tarning: %m'
       - '%f:%l:%c: %tote: %m'
+  bash-completion: &bash-completion
+    completion-command: 'bufcomp'
 
 languages:
   bash:
+    - <<: *bash-completion
     - <<: *bash-shellcheck
