Revert "off of efm"
This reverts commit e8843dc95e800cffea30a28886d1aad9172ee728.

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -2,9 +2,9 @@
 command = "gopls"
 config = { "gofumpt" = true, "staticcheck" = true }
 
-[language-server.mbls]
-command = "mbls"
+[language-server.efm]
+command = "efm-langserver"
 
 [[language]]
-language-servers = [ "mbls" ]
+language-servers = [ "efm" ]
 name = "bash"
