--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,11 +23,18 @@ confirm_os_window_close 0
 
 update_check_interval 1
 
+tab_bar_edge top
+tab_bar_min_tabs 0
+
 clear_all_shortcuts yes
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
 map cmd+n new_os_window
 map cmd+w close_window
 map cmd+q quit
+map cmd+t new_tab
+map cmd+shift+h previous_tab
+map cmd+shift+l next_tab
+map cmd+shift+w close_tab
 
 shell_integration disabled
