--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -32,8 +32,8 @@ map cmd+n new_os_window
 map cmd+w close_window
 map cmd+q quit
 map cmd+t new_tab
-map cmd+shift+h previous_tab
-map cmd+shift+l next_tab
+map cmd+h previous_tab
+map cmd+l next_tab
 map cmd+shift+w close_tab
 
 shell_integration disabled
