try different term management

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ confirm_os_window_close 0
 
 update_check_interval 1
 
-tab_bar_edge top
+enabled_layouts fat
 
 clear_all_shortcuts yes
 map cmd+c copy_to_clipboard
@@ -31,9 +31,10 @@ map cmd+v paste_from_clipboard
 map cmd+n new_os_window
 map cmd+w close_window
 map cmd+q quit
-map cmd+t new_tab
-map cmd+h previous_tab
-map cmd+l next_tab
-map cmd+shift+w close_tab
+map cmd+t launch --location=hsplit
+map cmd+h previous_window
+map cmd+l next_window
+map cmd+j layout_action bias 10 50 90
+map cmd+k layout_action bias 90 50 10
 
 shell_integration disabled
