more options for terminal sizing

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -34,7 +34,7 @@ map cmd+q quit
 map cmd+t launch --location=hsplit
 map cmd+h previous_window
 map cmd+l next_window
-map cmd+j layout_action bias 10 50 90
-map cmd+k layout_action bias 90 50 10
+map cmd+j layout_action bias 10 50 70 80 90
+map cmd+k layout_action bias 90 80 70 50 10
 
 shell_integration disabled
