add cursor colors

--- a/.config/helix/themes/ttypty.toml
+++ b/.config/helix/themes/ttypty.toml
@@ -1,5 +1,8 @@
 inherits = "monokai"
 
+"ui.cursor.primary.normal" = { fg = "black", bg = "white" }
+"ui.cursor.primary.insert" = { fg = "black", bg = "white" }
+"ui.cursor.primary.select" = { fg = "black", bg = "white" }
 "ui.bufferline" = {}
 "ui.bufferline.active" = { fg = "active_text", bg = "selection", modifiers = [
   "bold",
