change this to be sources/function

--- a/.config/ttypty/releases.env
+++ b/.config/ttypty/releases.env
@@ -1,5 +1,7 @@
-echo "https://github.com/alpinelinux/aports"
-command -v container >/dev/null && echo "https://github.com/apple/container"
-[ -d /Applications/kitty.app ] && echo "https://github.com/kovidgoyal/kitty"
-[ -d /Applications/MacVim.app ] && echo "https://github.com/macvim-dev/macvim"
-[ -d /Applications/Rectangle.app ] && echo "https://github.com/rxhanson/Rectangle"
+releases() {
+  echo "https://github.com/alpinelinux/aports"
+  command -v container >/dev/null && echo "https://github.com/apple/container"
+  [ -d /Applications/kitty.app ] && echo "https://github.com/kovidgoyal/kitty"
+  [ -d /Applications/MacVim.app ] && echo "https://github.com/macvim-dev/macvim"
+  [ -d /Applications/Rectangle.app ] && echo "https://github.com/rxhanson/Rectangle"
+}
