--- a/.config/git/local.config
+++ b/.config/git/local.config
@@ -52,3 +52,5 @@
     hunk-header-file-style = red
     hunk-header-line-number-style = "#067a00"
     hunk-header-style = file line-number syntax
+[diff "lb"]
+    textconv = lb conv
