--- a/.config/ttypty/releases.env
+++ b/.config/ttypty/releases.env
@@ -5,4 +5,5 @@ releases() {
   [ -d /Applications/kitty.app ] && echo "https://github.com/kovidgoyal/kitty"
   [ -d /Applications/MacVim.app ] && echo "https://github.com/macvim-dev/macvim"
   [ -d /Applications/Rectangle.app ] && echo "https://github.com/rxhanson/Rectangle"
+  [ -d /Applications/Ghostty.app ] && echo "https://github.com/ghostty-org/ghostty"
 }
