don't inherit dir

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -10,3 +10,5 @@ theme = deep
 font-thicken = true
 split-divider-color = "white"
 font-feature = -calt
+working-directory = "home"
+window-inherit-working-directory = false
