use this tool for a bit

--- a/.config/ttypty/releases.env
+++ b/.config/ttypty/releases.env
@@ -1,5 +1,6 @@
 releases() {
   echo "https://github.com/alpinelinux/aports"
+  echo "https://github.com/leomoon-studios/wiki-go"
   command -v container >/dev/null && echo "https://github.com/apple/container"
   command -v podman >/dev/null && echo "https://github.com/containers/podman"
   [ -d /Applications/kitty.app ] && echo "https://github.com/kovidgoyal/kitty"
