--- a/.config/ttypty/releases.env
+++ b/.config/ttypty/releases.env
@@ -1,10 +1,7 @@
 releases() {
-  echo "https://github.com/alpinelinux/aports"
   echo "https://github.com/leomoon-studios/wiki-go"
   command -v container >/dev/null && echo "https://github.com/apple/container"
-  command -v podman >/dev/null && echo "https://github.com/containers/podman"
+  command -v devcontainer > /dev/null && echo "https://github.com/alpinelinux/aports"
   [ -d /Applications/kitty.app ] && echo "https://github.com/kovidgoyal/kitty"
-  [ -d /Applications/MacVim.app ] && echo "https://github.com/macvim-dev/macvim"
   [ -d /Applications/Rectangle.app ] && echo "https://github.com/rxhanson/Rectangle"
-  [ -d /Applications/Ghostty.app ] && echo "https://github.com/ghostty-org/ghostty"
 }
