switch back to swiftbar

--- a/.config/ttypty/releases.env
+++ b/.config/ttypty/releases.env
@@ -4,4 +4,5 @@ releases() {
   command -v devcontainer > /dev/null && echo "https://github.com/alpinelinux/aports"
   [ -d /Applications/kitty.app ] && echo "https://github.com/kovidgoyal/kitty"
   [ -d /Applications/Rectangle.app ] && echo "https://github.com/rxhanson/Rectangle"
+  [ -d /Applications/SwiftBar.app ] && echo "https://github.com/swiftbar/SwiftBar"
 }
