--- a/.config/devcontainer/Containerfile
+++ b/.config/devcontainer/Containerfile
@@ -14,6 +14,7 @@ RUN apk update && apk upgrade && apk add --no-cache \
     bash \
     bash-completion \
     bat \
+    bubblewrap \
     busybox \
     curl \
     delta \
