moving everything around

--- a/.vars.env
+++ b/.vars.env
@@ -1,11 +1,10 @@
 #!/usr/bin/env bash
 IS_HOST=1
-[ -e "/run/.containerenv" ] && IS_HOST=0
-source /etc/bashrc
+[ -n "$CONTAINER_NAME" ] && IS_HOST=0
+[ -e "/etc/bashrc" ] && source /etc/bashrc
 export IS_HOST
 if [ "$IS_HOST" -eq 1 ]; then
-  export GO_NO_TOOLS=1
-  export EDITOR_NO_TOOLS=1
+  export EDITOR=vi
 else
   export EDITOR=nvim
 fi
