dev and editor updates

--- a/.vars.env
+++ b/.vars.env
@@ -3,8 +3,4 @@ IS_HOST=1
 [ -n "$CONTAINER_NAME" ] && IS_HOST=0
 [ -e "/etc/bashrc" ] && source /etc/bashrc
 export IS_HOST
-if [ "$IS_HOST" -eq 1 ]; then
-  export EDITOR=vi
-else
-  export EDITOR=nvim
-fi
+[ -e "$HOME/.config/ttypty/editor" ] && export EDITOR=$(cat "$HOME/.config/ttypty/editor")
