kitty window changing

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -32,8 +32,7 @@ map ctrl+alt+n new_os_window
 map ctrl+alt+w close_window
 map ctrl+alt+q quit
 map ctrl+alt+t launch --location=hsplit
-map ctrl+alt+h previous_window
-map ctrl+alt+l next_window
+map ctrl+alt+tab next_window
 map ctrl+alt+j layout_action bias 10 50 70 80 90
 map ctrl+alt+k layout_action bias 90 80 70 50 10
 
